// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package google.internal.remoting.cloud.v1alpha;

// Represents a service account created for a remote access host instance.
message ServiceAccountInfo {
  // The email address of the remote access host service account.
  string email = 1;

  // An OAuth authorization code generated for the remote access host service
  // account. This code will be exchanged for an access and refresh token by the
  // remote access host instance. The access token will be used for signaling
  // and to communicate status back to the Chrome Remote Desktop backend.
  // `authorization_code` has a limited lifetime (< 10 minutes) so it must be
  // exchanged for a refresh token soon after it is received.
  optional string authorization_code = 2;
}
